--- a/login/estilosLogin.css
+++ b/login/estilosLogin.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url(recursos/parallax1.jpg);
+  background-image: url(/recursos/parallax1.jpg);
   height: 100vh;
 }
 
